# pgplayer

./: .gitignore  LICENSE  README.md  TODO.txt  pyproject.toml
pgplayer/: __init__.py  videoplayer.py  videorecorder.py
pgplayer/examples/: 01_basic.py  basic.py  player.py  recorder.py  web_vid.py  youtube_download.py
